--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-    "name": "murphy-video-api",
-    "version": "1.0.0",
-    "description": "Fetch fresh Murphy video URLs",
-    "main": "index.js",
-    "dependencies": {
-      "express": "^4.17.3",
-      "axios": "^0.27.2",
-      "cors": "^2.8.5"
-    },
-    "scripts": {
-      "start": "node index.js"
-    },
-    "engines": {
-      "node": ">=14"
-    }
+  "name": "murphy-video-api",
+  "version": "1.0.0",
+  "description": "Fetch fresh Murphy video URLs",
+  "main": "index.js",
+  "dependencies": {
+    "express": "^4.17.3",
+    "axios": "^0.27.2",
+    "cors": "^2.8.5",
+    "xml2js": "^0.4.23"
+  },
+  "scripts": {
+    "start": "node index.js"
+  },
+  "engines": {
+    "node": ">=14"
   }
-  
+}
